GNOME Bugzilla – Bug 555662
resize-window signal is inconvenient
Last modified: 2014-04-14 17:45:13 UTC
The resize-window signal is emitted to set the vte widget to the specified size. It occurs in 2 contexts, one setting pixel size and one setting grid size. The pixel size is used as-is, the grid size is multiplied with char width/height and added xpad/ypad. In gnome-terminal, we just have to take the pixel size and reconstruct the grid size from it, inverting the operation above. I think the resize-window signal should carry grid sizes instead. Also, why does not vte just set the grid size directly itself and just queues a resize?