widget: Make resize-window signal cell based

And don't report the padding down to the application.

https://bugzilla.gnome.org/show_bug.cgi?id=555662